# netPLCEditor

./: CMakeLists.txt
cmake/: GitVersion.cmake
res/: data.qrc  icons.qrc
res/plcopen/: POU_Project_Template.xml
src/: main.cpp
src/plc/: PLCOpen.cpp  PLCOpen.h  PLCOpenParser.cpp  PLCOpenParser.h  PLCOpenParserGenerator.cpp  PLCOpenParserGenerator.h  PLCOpenParserHandler.cpp  PLCOpenParserHandler.h  PLCOpenTypes.h  PLCOpenXML.cpp  PLCOpenXML.h
src/ui/: PageEdit.cpp  PageEdit.h  PageEdit.ui  PageMain.cpp  PageMain.h  PageMain.ui  mainwindow.cpp  mainwindow.ui
